force-app/main/default/objects/DecisionProcess__c/DecisionProcess__c.object-meta.xml
<CustomObject>
    <label>품의 이력</label>
    <nameField>
        <label>품의명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>