force-app/main/default/objects/DecisionProcess__c/fields/approvedCount__c.field-meta.xml
<CustomField>
    <fullName>approvedCount__c</fullName>
    <label>approvedCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>