force-app/main/default/objects/DecisionProcess__c/fields/approvedDate__c.field-meta.xml
<CustomField>
    <fullName>approvedDate__c</fullName>
    <label>approvedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>