force-app/main/default/objects/DecisionProcess__c/fields/approvedUserCode__c.field-meta.xml
<CustomField>
    <fullName>approvedUserCode__c</fullName>
    <label>approvedUserCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>