force-app/main/default/objects/DecisionProcess__c/fields/approvedUserName__c.field-meta.xml
<CustomField>
    <fullName>approvedUserName__c</fullName>
    <label>approvedUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>