force-app/main/default/objects/DecisionProcess__c/fields/approvedUserType__c.field-meta.xml
<CustomField>
    <fullName>approvedUserType__c</fullName>
    <label>approvedUserType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>