force-app/main/default/objects/DecisionProcess__c/fields/APPV_NO__c.field-meta.xml
<CustomField>
    <fullName>APPV_NO__c</fullName>
    <label>APPVNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>