force-app/main/default/objects/DecisionProcess__c/fields/DocId__c.field-meta.xml
<CustomField>
    <fullName>DocId__c</fullName>
    <label>DocId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>