force-app/main/default/objects/DecisionProcess__c/fields/DocStatus__c.field-meta.xml
<CustomField>
    <fullName>DocStatus__c</fullName>
    <label>DocStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>