force-app/main/default/objects/DecisionProcess__c/fields/DocURL__c.field-meta.xml
<CustomField>
    <fullName>DocURL__c</fullName>
    <label>품의서 URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>