force-app/main/default/objects/DecisionProcess__c/fields/fm_ApprovalStatusInfo__c.field-meta.xml
<CustomField>
    <fullName>fm_ApprovalStatusInfo__c</fullName>
    <formula>CASE(
   DocStatus__c, 
   &quot;임시저장&quot;, DocStatus__c, 
   &quot;진행&quot;, DocStatus__c &amp;&quot;[&quot;&amp;   TEXT(approvedCount__c ) &amp;&quot;/&quot;&amp; TEXT(totalLineCount__c )&amp;&quot;]&quot;,
   &quot;완료&quot;, DocStatus__c &amp;&quot;[&quot;&amp;   TEXT(approvedCount__c ) &amp;&quot;/&quot;&amp; TEXT(totalLineCount__c )&amp;&quot;]&quot;,
   DocStatus__c
)</formula>
    <label>결재상태</label>
    <type>Text</type>
</CustomField>