force-app/main/default/objects/DecisionProcess__c/fields/fm_RecentApprovalInfo__c.field-meta.xml
<CustomField>
    <fullName>fm_RecentApprovalInfo__c</fullName>
    <formula>IF(  
   NOT(ISBLANK(approvedUserName__c)),
   approvedUserName__c &amp;&quot;(&quot;&amp; approvedUserType__c&amp;&quot;) &quot;&amp; approvedDate__c,
   &quot;&quot;
)</formula>
    <label>최근 결재 이력</label>
    <type>Text</type>
</CustomField>