force-app/main/default/objects/DecisionProcess__c/fields/OpenURL__c.field-meta.xml
<CustomField>
    <fullName>OpenURL__c</fullName>
    <formula>HYPERLINK( DocURL__c, &quot;품의서 열기&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>상세보기</label>
    <type>Text</type>
</CustomField>