force-app/main/default/objects/DecisionProcess__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업활동</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>DecisionProcess</relationshipName>
    <type>Lookup</type>
</CustomField>