force-app/main/default/objects/DecisionProcess__c/fields/RegUserHeadOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>RegUserHeadOfficeCode__c</fullName>
    <label>RegUserHeadOfficeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>