force-app/main/default/objects/DecisionProcess__c/fields/RegUserName__c.field-meta.xml
<CustomField>
    <fullName>RegUserName__c</fullName>
    <label>RegUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>