force-app/main/default/objects/DecisionProcess__c/fields/RegUserNumber__c.field-meta.xml
<CustomField>
    <fullName>RegUserNumber__c</fullName>
    <label>RegUserNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>