force-app/main/default/objects/DecisionProcess__c/fields/RegUserSUCode__c.field-meta.xml
<CustomField>
    <fullName>RegUserSUCode__c</fullName>
    <label>RegUserSUCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>