force-app/main/default/objects/DecisionProcess__c/fields/RegUserTeamCode__c.field-meta.xml
<CustomField>
    <fullName>RegUserTeamCode__c</fullName>
    <label>RegUserTeamCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>