force-app/main/default/objects/DecisionProcess__c/fields/TotalHeadcount__c.field-meta.xml
<CustomField>
    <fullName>TotalHeadcount__c</fullName>
    <label>TotalHeadcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>