force-app/main/default/objects/DecisionProcess__c/fields/totalLineCount__c.field-meta.xml
<CustomField>
    <fullName>totalLineCount__c</fullName>
    <label>totalLineCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>