force-app/main/default/objects/DecisionProcess__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM001</fullName>
                <label>Risk 점검 의뢰서</label>
            </value>
            <value>
                <fullName>CRM002</fullName>
                <label>법인 (사용)인감 신청</label>
            </value>
            <value>
                <fullName>CRM003</fullName>
                <label>사용인감 반출 신청</label>
            </value>
            <value>
                <fullName>CRM004</fullName>
                <label>제안 품의</label>
            </value>
            <value>
                <fullName>CRM005</fullName>
                <label>오픈 품의</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>